--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -2,16 +2,17 @@
 body,
 input, select, textarea {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+        font-size:14px;
 }
 
 /* BASE LAYOUT */
 
 html {
-	background-color: #ddd;
-	background-image: -moz-linear-gradient(center top, #aaa, #ddd);
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #aaa), color-stop(1, #ddd));
-	background-image: linear-gradient(top, #aaa, #ddd);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr = '#aaa', EndColorStr = '#ddd');
+	background-color: #3b5564;
+	background: url(../images/bg.jpg) top center no-repeat #97cae4;
+	margin:0px;
+        padding:0px;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr = '#3b5', EndColorStr = '#564');
 	background-repeat: no-repeat;
 	height: 100%;
 	/* change the box model to exclude the padding from the calculation of 100% height (IE8+) */
@@ -21,7 +22,7 @@ html {
 }
 
 html.no-cssgradients {
-	background-color: #aaa;
+	background-color: #3b5564;
 }
 
 .ie6 html {
@@ -44,7 +45,7 @@ body {
 }
 
 #grailsLogo {
-	background-color: #abbf78;
+	background-color: #fff;
 }
 
 /* replace with .no-boxshadow body if you have modernizr available */
@@ -61,7 +62,7 @@ body {
 }
 
 a:link, a:visited, a:hover {
-	color: #48802c;
+	color: #034AA6;
 }
 
 a:hover, a:active {
@@ -69,11 +70,29 @@ a:hover, a:active {
 }
 
 h1 {
-	color: #48802c;
-	font-weight: normal;
-	font-size: 1.25em;
+	color:#034AA6;
+        font-size:16px;
+        font-weight:bold;
 	margin: 0.8em 0 0.3em 0;
+        padding:5px 0 5px 0;
 }
+
+h2 {
+        color:#759f1b;
+        font-size:16px;
+        float:left;
+        font-weight:bold;
+        margin:0px;
+        padding:5px 0 0 0;
+    }
+    
+span.blue{
+        color:#a5dcf8;
+    }
+
+span.dark_blue{
+        color:#116c64;
+    }
 
 ul {
 	padding: 0;
@@ -86,11 +105,15 @@ img {
 /* GENERAL */
 
 #grailsLogo a {
-	display: inline-block;
-	margin: 1em;
+	padding:30px 0 0 20px;
+        float:left;
 }
 
 .content {
+    width:900px;
+    height:auto;
+    margin:auto;
+    background-color:#fff;
 }
 
 .content h1 {
@@ -103,40 +126,165 @@ img {
 	border: none;
 }
 
-.footer {
-	background: #abbf78;
-	color: #000;
-	clear: both;
-	font-size: 0.8em;
-	margin-top: 1.5em;
-	padding: 1em;
-	min-height: 1em;
-}
+.header{
+        width:960px;
+        height:114px;
+        margin:auto;
+        background:url(../images/header_bg.gif) repeat-x;
+    }
+    
+ .right_header{
+        float:right;
+        width:550px;
+ }
 
-.footer a {
-	color: #255b17;
-}
+/*-----------------------------footer------------------*/
+    #footer{
+        width:960px;
+        height:40px;
+        color:#508aa1;
+        background-color:#e8eff2;
+    }
+    .copyright{
+    float:left;
+        padding:10px 0 0 10px;
+    }
+    .center_footer{
+        color:#c3ced4;
+        font-size:12px;
+        font-weight:bold;
+        padding:15px;
+        text-align:center;
+        float:right;
+    }
+
 
 .spinner {
 	background: url(../images/spinner.gif) 50% 50% no-repeat transparent;
 	height: 16px;
 	width: 16px;
-    padding: 0.5em;
-    position: absolute;
-    right: 0;
+        padding: 0.5em;
+        position: absolute;
+        right: 0;
 	top: 0;
 	text-indent: -9999px;
 }
 
 /* NAVIGATION MENU */
+/*----------------------menu-------------------------*/
+    #menu{
+        width:500px;
+        height:35px;
+        float:right;
+        padding:40px 0 0 0;
+    }
+    #menu ul{
+        list-style:none;padding:0px;margin:0px;display:block; font-weight:bold;
+    }
+    #menu ul li{
+        list-style:none;display:inline;float:left;width:96px;height:35px;padding:0px;line-height:35px;font-size:13px;margin:0 3px 0 3px;
+    }
+    #menu ul li a{
+        height:35px; width:96px;float:left;text-decoration:none;padding:0px;margin:0px;color:#6c7b83;text-align:center; background:url(../images/menu_bt.gif) no-repeat center;
+    }
+    #menu ul li a:hover{
+        height:35px;width:96px;text-decoration:none;color: #68C2EF;
+    }
+    #menu ul li a.current{
+        height:35px;width:96px;float:left;text-decoration:none;padding:0px;margin:0px;color: #68C2EF;background:url(../images/menu_bt.gif) no-repeat center;
+    }
+
+    #middle_box{
+        width:960px;
+        height:280px;
+        clear:both;
+        margin:auto;
+        background:url(../images/middle_banner1.jpg) repeat-x center;
+    }
+    
+    .middle_box_content{
+        padding:10px 0 0 50px;
+    }
+    .top_menu{
+        width:285px;
+        float:right;
+    }
+    a.login {
+        width:49px;
+        height:35px;
+        display:block;
+        background:url(../images/login.gif) no-repeat center;
+        line-height:35px;
+        color:#a6c4d4;
+        font-size:10px;
+        font-weight:bold;
+        text-decoration:none;
+        padding:0 0 0 40px;
+        float:left;
+        margin:0 3px 0 3px;
+    }
+    a.sign_up {
+        width:49px;
+        height:35px;
+        display:block;
+        background:url(../images/sign_up.gif) no-repeat center;
+        line-height:35px;
+        color:#a6c4d4;
+        font-size:10px;
+        font-weight:bold;
+        text-decoration:none;
+        padding:0 0 0 40px;
+        float:left;
+        margin:0 3px 0 3px;
+    }
+    
+    a.login_out {
+        width:49px;
+        height:35px;
+        display:block;
+        background:url(../images/logout_icon2.jpg) no-repeat center;
+        line-height:35px;
+        color:#a6c4d4;
+        font-size:10px;
+        font-weight:bold;
+        text-decoration:none;
+        padding:0 0 0 40px;
+        float:left;
+        margin:0 3px 0 3px;
+    }
+    .pattern_bg{
+        width:960px;
+        height:162px;
+        clear:both;
+        margin:auto;
+        background:url(../images/pattern_bg1.jpg) no-repeat center;
+    }
+    .pattern_box{
+        width:400px;
+        float:left;
+        padding:15px 0 0 25px;
+    }
+    .pattern_box_icon{
+        float:left;
+        padding:5px;
+    }
+    .pattern_content{
+        width:300px;
+        float:left;
+        padding:0 0 0 10px;
+    }
+
+
 
 .nav {
-	background-color: #efefef;
-	padding: 0.5em 0.75em;
+	background-color: #E8F2FF;
+	padding: 0.50em 0.0em .50em .75em;
 	   -moz-box-shadow: 0 0 3px 1px #aaaaaa;
 	-webkit-box-shadow: 0 0 3px 1px #aaaaaa;
 	        box-shadow: 0 0 3px 1px #aaaaaa;
 	zoom: 1;
+        font-size: 13px;
+        
 }
 
 .nav ul {
@@ -168,7 +316,7 @@ img {
 }
 
 .nav a:focus, .nav a:hover {
-	background-color: #999999;
+	background-color: #4596FF;
 	color: #ffffff;
 	outline: none;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
@@ -470,7 +618,7 @@ th.desc a {
 }
 
 th:hover, tr:hover {
-	background: #E1F2B6;
+	background: #C7DFFF;
 }
 
 /* PAGINATION */
